@startuml

title __INTERPOLATOR's Class Diagram__\n

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.interpolator {
        class com.itbird.design.strategy.demo.interpolator.AccelerateDecelerateInterpolator {
            + AccelerateDecelerateInterpolator()
            + AccelerateDecelerateInterpolator()
            + getInterpolation()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.interpolator {
        class com.itbird.design.strategy.demo.interpolator.AccelerateInterpolator {
            + AccelerateInterpolator()
            + AccelerateInterpolator()
            + AccelerateInterpolator()
            + AccelerateInterpolator()
            + getInterpolation()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.interpolator {
        abstract class com.itbird.design.strategy.demo.interpolator.BaseInterpolator {
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.interpolator {
        interface com.itbird.design.strategy.demo.interpolator.Interpolator {
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.interpolator {
        class com.itbird.design.strategy.demo.interpolator.LinearInterpolator {
            + LinearInterpolator()
            + LinearInterpolator()
            + getInterpolation()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.interpolator {
        class com.itbird.design.strategy.demo.interpolator.ObjectAnimator {
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.interpolator {
        interface com.itbird.design.strategy.demo.interpolator.TimeInterpolator {
            {abstract} + getInterpolation()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.interpolator {
        class com.itbird.design.strategy.demo.interpolator.ValueAnimator {
            {static} - TAG : String
            - mInterpolator : TimeInterpolator
            + setInterpolator()
        }
      }
    }
  }
  

  com.itbird.design.strategy.demo.interpolator.AccelerateDecelerateInterpolator -up-|> com.itbird.design.strategy.demo.interpolator.BaseInterpolator
  com.itbird.design.strategy.demo.interpolator.AccelerateInterpolator -up-|> com.itbird.design.strategy.demo.interpolator.BaseInterpolator
  com.itbird.design.strategy.demo.interpolator.BaseInterpolator .up.|> com.itbird.design.strategy.demo.interpolator.Interpolator
  com.itbird.design.strategy.demo.interpolator.LinearInterpolator -up-|> com.itbird.design.strategy.demo.interpolator.BaseInterpolator
  com.itbird.design.strategy.demo.interpolator.ObjectAnimator -up-|> com.itbird.design.strategy.demo.interpolator.ValueAnimator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
